--- a/dev.html
+++ b/dev.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Steven Dunn">
     <title>Haven Agency Code Challenge</title>
     <!-- build:css live/css/styles.min.css -->
-    <link href="css/reset.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="src/css/reset.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="src/css/styles.css" media="screen" rel="stylesheet" type="text/css">
     <!-- /build -->
 </head>
 <body>
