Added BrowserSync to the project to update the browser whenever html, css, or js files are changed.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="description" content="Haven Agency Code Challenge">
     <meta name="author" content="Steven Dunn">
     <title>Haven Agency Code Challenge</title>
-    <!-- build:css live/css/styles.min.css -->
     <link href="src/css/reset.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="src/css/styles.css" media="screen" rel="stylesheet" type="text/css">
-    <!-- /build -->
+    <link href="src/css/normalize.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="src/sass/css/main.css" media="screen" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
@@ -17,7 +16,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/libraries/jquery-3.2.1.min.js"><\/script>')</script> <!--Offline Fallback-->
     <!-- build:js live/js/live.min.js -->
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="src/scripts/main.js"></script>
     <!-- /build -->
 </body>
 </html>
