Added ticket section html and css.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,43 @@
     <link href="src/sass/css/main.css" media="screen" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="main-content">
+<div class="outer-container">
     <header>
         <div class="inner-box">
             <img class="gnc-header-logo" src="/src/assets/images/gnc-logo.svg" alt="Gnc Header Logo" title="Gnc Header Logo"/>
+            <div class="live-nation"></div>
+        </div>
+        <div class="share">
+            <span class="share-text">Share</span>
+            <div class="fb-icon"></div>
+            <div class="twitter-icon"></div>
         </div>
     </header>
+    <div class="main-content">
+        <section class="ticket-section">
+            <div class="ticket-rock"></div>
+            <p class="chance-to-win">Enter for a chance to win a Rock Flight® to a Live Nation® concert of your choice!</p>
+            <p class="prize-winner">1 Grand Prize winner will receive:</p>
+            <ul class="prize-list">
+                <li class="prize-item">
+                    <div class="prize-icon ticket"></div>
+                    <span>2 tickets to a Live Nation concert in the U.S.</span>
+                </li>
+                <li class="prize-item">
+                    <div class="prize-icon airplane"></div>
+                    <span>Airfare & hotel accommodations for two</span>
+                </li>
+                <li class="prize-item">
+                    <div class="prize-icon cash"></div>
+                    <span>$200 cash gift card</span>
+                </li>
+            </ul>
+        </section>
+        <section class="form-section">
+
+        </section>
+
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>window.jQuery || document.write('<script src="scripts/libraries/jquery-3.2.1.min.js"><\/script>')</script> <!--Offline Fallback-->
