--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
         <section class="form-section">
 
         </section>
-
     </div>
 </div>
+<div class="crowd"></div>
+<footer>
+</footer>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>window.jQuery || document.write('<script src="scripts/libraries/jquery-3.2.1.min.js"><\/script>')</script> <!--Offline Fallback-->
 <script type="text/javascript" src="src/scripts/main.js"></script>
