--- a/index.html
+++ b/index.html
@@ -44,7 +44,44 @@
             </ul>
         </section>
         <section class="form-section">
-
+            <form id="contest-form">
+                <div class="input-row">
+                    <div class="input-container">
+                        <label for="firstName">First Name</label>
+                        <input id="firstName" name="firstName" type="text" title="first name" required/>
+                    </div>
+                    <div class="input-container">
+                        <label for="lastName">Last Name</label>
+                        <input id="lastName" name="lastName" type="text" title="last name" required/>
+                    </div>
+                </div>
+                <div class="input-row">
+                    <div class="input-container">
+                        <label for="email">Email</label>
+                        <input id="email" name="email" type="text" title="email" required/>
+                    </div>
+                    <div class="input-container">
+                        <label for="confirm-email">Confirm Email</label>
+                        <input id="confirm-email" name="confirm-email" type="text" title="Confirm Email" required/>
+                    </div>
+                </div>
+                <div class="input-row">
+                    <div class="input-container">
+                        <label for="metro">Select Your Metro Area</label>
+                        <input id="metro" name="firstName" type="text" title="Select Your Metro Area"/>
+                    </div>
+                    <div class="input-container">
+                        <label for="zip-code">Zip Code</label>
+                        <input id="zip-code" name="zip-code" type="text" title="Zip-code" required/>
+                    </div>
+                </div>
+                <div class="input-row flex-start">
+                    <div class="input-container phone">
+                        <label for="phone">Phone Number</label>
+                        <input id="phone" name="phone" type="text" title="phone"/>
+                    </div>
+                </div>
+            </form>
         </section>
     </div>
 </div>
