Minor formatting and documentation.

--- a/index.html
+++ b/index.html
@@ -48,37 +48,37 @@
                 <div class="input-row">
                     <div class="input-container">
                         <label for="firstName">First Name</label>
-                        <input id="firstName" name="firstName" type="text" title="first name" required/>
+                        <input id="firstName" name="firstName" type="text" title="First Name" required/>
                     </div>
                     <div class="input-container">
                         <label for="lastName">Last Name</label>
-                        <input id="lastName" name="lastName" type="text" title="last name" required/>
+                        <input id="lastName" name="lastName" type="text" title="Last Name" required/>
                     </div>
                 </div>
                 <div class="input-row">
                     <div class="input-container">
                         <label for="email">Email</label>
-                        <input id="email" name="email" type="text" title="email" required/>
+                        <input id="email" name="email" type="email" title="Email" required/>
                     </div>
                     <div class="input-container">
                         <label for="confirm-email">Confirm Email</label>
-                        <input id="confirm-email" name="confirm-email" type="text" title="Confirm Email" required/>
+                        <input id="confirm-email" name="confirm-email" type="email" title="Confirm Email" required/>
                     </div>
                 </div>
                 <div class="input-row">
                     <div class="input-container">
-                        <label for="metro">Select Your Metro Area</label>
-                        <input id="metro" name="firstName" type="text" title="Select Your Metro Area"/>
+                        <label for="metro-area">Select Your Metro Area</label>
+                        <input id="metro-area" name="metroArea" type="text" title="Select Your Metro Area"/>
                     </div>
                     <div class="input-container">
                         <label for="zip-code">Zip Code</label>
-                        <input id="zip-code" name="zip-code" type="text" title="Zip-code" required/>
+                        <input id="zip-code" name="zipCode" type="text" title="Zip Code" required/>
                     </div>
                 </div>
                 <div class="input-row flex-start">
                     <div class="input-container phone">
                         <label for="phone">Phone Number</label>
-                        <input id="phone" name="phone" type="text" title="phone"/>
+                        <input id="phone" name="phone" type="text" title="Phone Number"/>
                     </div>
                 </div>
             </form>
@@ -86,8 +86,7 @@
     </div>
 </div>
 <div class="crowd"></div>
-<footer>
-</footer>
+<footer></footer>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>window.jQuery || document.write('<script src="scripts/libraries/jquery-3.2.1.min.js"><\/script>')</script> <!--Offline Fallback-->
 <script type="text/javascript" src="src/scripts/main.js"></script>
